--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -783,13 +783,12 @@ dt {
 section {
   max-width: 650px;
   padding: 30px 0px 50px 0px;
-  margin: 20px 0;
-  margin-top: 70px;
+  margin: 0 0;
 }
 section #title {
   border: 0;
   outline: none;
-  margin: 0 0 50px 0;
+  margin: 0 0 0 0;
   padding: 0 0 5px 0;
 }
 section #title h1 {
