add link to top page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
         {{content}}
       </section>
 
+      <a href="/{{ base.url }}">一覧に戻る</a>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
