トップページにも "一覧へ戻る" リンクがあったのを修正

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -28,6 +28,9 @@
         </div>
         {{content}}
       </section>
+
+      <hr>
+      <a href="/reading-vimrc/">一覧に戻る</a>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
