--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -30,7 +30,7 @@
       </section>
 
       <hr>
-      <a href="/reading-vimrc/">一覧に戻る</a>
+      <a href="{{ site.base-url }}">一覧に戻る</a>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
