Link to base url

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -22,7 +22,7 @@
 
       <section>
         <div id="title">
-          <h1>{% if page.title %}{{ page.title }}{% endif %}</h1>
+          <a href="{{ site.base-url }}"><h1>{% if page.title %}{{ page.title }}{% endif %}</h1></a>
           <p></p>
           <hr>
         </div>
