--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
   </head>
   <body>
     <div class="wrapper">
+        <div id="header">
+            {% include navigation.html %}
+        </div>
 
       <section>
         <div id="title">
