--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -744,7 +744,7 @@ dt {
   -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
   -o-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
-  background-color: #93bd20;
+  /* background-color: #93bd20; */
   padding: 10px 12px;
   margin-top: 6px;
   line-height: 14px;
@@ -753,13 +753,13 @@ dt {
   text-align: center;
 }
 #header nav li a:hover {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #749619), color-stop(100%, #527f0e));
-  background: -webkit-linear-gradient(#749619, #527f0e);
-  background: -moz-linear-gradient(#749619, #527f0e);
-  background: -o-linear-gradient(#749619, #527f0e);
-  background: -ms-linear-gradient(#749619, #527f0e);
-  background: linear-gradient(#749619, #527f0e);
-  background-color: #659e10;
+  /* background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #749619), color-stop(100%, #527f0e)); */
+  /* background: -webkit-linear-gradient(#749619, #527f0e);                                                      */
+  /* background: -moz-linear-gradient(#749619, #527f0e);                                                         */
+  /* background: -o-linear-gradient(#749619, #527f0e);                                                           */
+  /* background: -ms-linear-gradient(#749619, #527f0e);                                                          */
+  /* background: linear-gradient(#749619, #527f0e);                                                              */
+  /* background-color: #659e10; */
   border: 1px solid #527f0e;
   -moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   -webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
@@ -847,4 +847,67 @@ section #title .credits.right {
   nav {
     display: none;
   }
+}
+
+/* ========================================
+ * Reading vimrc
+ */
+
+#header {
+	height: 40px;
+    padding-top: 3px;
+}
+
+#header nav {
+	margin: 0 auto;
+    background: none;
+}
+
+#header nav ul {
+    padding-left: 10px;
+}
+
+#header nav li {
+	line-height:35px;
+}
+
+#header nav li a {
+    background: none;
+    margin-top: 0;
+    color: #ffcc00;
+    border: 1px solid #434343;
+}
+
+#header nav li a:hover {
+    color: #ffcc00;
+    border: 1px solid #0f0f0f;
+}
+
+#header nav li.active a {
+	color: #ffeb9b;
+}
+
+#header .nav-head {
+    margin-right: 10px;
+}
+
+#header nav li.nav-head a{
+    border: none;
+    box-shadow: none;
+    font-size: 16px;
+}
+
+body {
+	margin-top: 45px;
+}
+
+@media print, screen and (max-width: 480px) {
+  #header {
+    display: none;
+  }
+
+  body {
+      margin-top: 0;
+  }
+
 }
