Implement Responsible navigation header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,7 @@
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <script src="{{ site.base-url }}javascripts/navigation.js"></script>
   </body>
 </html>
