--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,18 @@
 <nav>
-    <ul>
-        <li class="nav-head"><a href="{{ site.baseurl }}">vimrc読書会</a></li>
-        <li {% if page.url == '/index.html' %}class="active"{% endif %}><a href="{{ site.baseurl }}">Home</a></li>
-        <li {% if page.url == '/archive/index.html' %}class="active"{% endif %}><a href="{{ site.baseurl }}archive">Archive</a></li>
-        <li><a href="https://github.com/vim-jp/reading-vimrc/wiki/Request">Request</a></li>
-        <li><a href="http://lingr.com/room/vim">Lingr - Vim部屋</a></li>
-    </ul>
+    <div class="nav-bar">
+        <button class="nav-toggle" data-toggle="collapse" data-target=".target">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="nav-head" href="{{ site.base-url }}">vimrc読書会</a>
+    </div>
+    <div class="collapse navbar-collapse target">
+        <ul class="nav-list">
+            <li {% if page.url == '/index.html' %}class="active"{% endif %}><a href="{{ site.base-url }}">Home</a></li>
+            <li {% if page.url == '/archive/index.html' %}class="active"{% endif %}><a href="{{ site.base-url }}archive">Archive</a></li>
+            <li><a href="https://github.com/vim-jp/reading-vimrc/wiki/Request">Request</a></li>
+            <li><a href="http://lingr.com/room/vim">Lingr - Vim部屋</a></li>
+        </ul>
+    </div>
 </nav>
