--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -36,5 +36,7 @@
       <a href="index.html">一覧に戻る</a> / <a href="{{ site.base-url }}">トップに戻る</a>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <script src="{{ site.base-url }}javascripts/navigation.js"></script>
   </body>
 </html>
