link to gitter in top navigator
instead of lingr

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,7 +21,7 @@
                 {% endif %}>Stat</a>
             </li>
             <li><a href="https://github.com/vim-jp/reading-vimrc/wiki/Request">Request</a></li>
-            <li><a href="http://lingr.com/room/vim">Lingr - Vim部屋</a></li>
+            <li><a href="https://gitter.im/vim-jp/reading-vimrc">Gitter (vim-jp/reading-vimrc)</a></li>
         </ul>
     </div>
 </nav>
