--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,42 +1,9 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{% if page.title %}{{ page.title }}{% endif %}</title>
-    <link rel="stylesheet" href="{{ site.base-url }}stylesheets/styles.css">
-    <link rel="stylesheet" href="{{ site.base-url }}stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="{{ site.base-url }}javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="{{ site.base-url }}stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-  </head>
-  <body>
-    <div class="wrapper">
-        <div id="header">
-            {% include navigation.html %}
-        </div>
-
-      <section>
-        <div id="title">
-          <a href="{{ site.base-url }}{{ page.url | remove_first:'/' }}"><h1>{% if page.title %}{{ page.title }}{% endif %}</h1></a>
-          <p></p>
-          <hr>
-        </div>
-        {{content}}
-      </section>
-
-      <hr>
-      <a href="index.html">一覧に戻る</a> / <a href="{{ site.base-url }}">トップに戻る</a>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-
-    <script src="{{ site.base-url }}javascripts/navigation.js"></script>
-  </body>
-</html>
+---
+layout: base
+---
+<div id="title">
+  <a href="{{ site.github.url }}/{{ page.url | remove_first:'/' }}"><h1>{% if page.title %}{{ page.title }}{% endif %}</h1></a>
+  <p></p>
+  <hr>
+</div>
+{{content}}
