--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,43 +1,13 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{% if page.title %}{{ page.title }}{% endif %}</title>
-    <link rel="stylesheet" href="{{ site.base-url }}stylesheets/styles.css">
-    <link rel="stylesheet" href="{{ site.base-url }}stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="{{ site.base-url }}javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="{{ site.base-url }}stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  </head>
-  <body>
-    <div class="wrapper">
-        <div id="header">
-            {% include navigation.html %}
-        </div>
-
-      <section>
-        <div id="title">
-          {% if page.url == '/index.html' %}
-              <a href="{{ site.base-url }}{{ page.url | remove_first:'/' | replace:'index.html','' }}"><h1>{% if page.title %}{{ page.title }}{% endif %}</h1></a>
-          {% else %}
-              <a href="{{ site.base-url }}{{ page.url | remove_first:'/' }}"><h1>{% if page.title %}{{ page.title }}{% endif %}</h1></a>
-          {% endif %}
-          <p></p>
-          <hr>
-        </div>
-        {{content}}
-      </section>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-
-    <script src="{{ site.base-url }}javascripts/navigation.js"></script>
-  </body>
-</html>
+---
+layout: base
+---
+<div id="title">
+  {% if page.url == '/index.html' %}
+      <a href="{{ site.github.url }}/{{ page.url | remove_first:'/' | replace:'index.html','' }}"><h1>{% if page.title %}{{ page.title }}{% endif %}</h1></a>
+  {% else %}
+      <a href="{{ site.github.url }}/{{ page.url | remove_first:'/' }}"><h1>{% if page.title %}{{ page.title }}{% endif %}</h1></a>
+  {% endif %}
+  <p></p>
+  <hr>
+</div>
+{{content}}
