open some links in other tabs

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,8 +20,8 @@
                   href="{{ site.github.url }}/stat/"
                 {% endif %}>Stat</a>
             </li>
-            <li><a href="https://github.com/vim-jp/reading-vimrc/wiki/Request">Request</a></li>
-            <li><a href="https://gitter.im/vim-jp/reading-vimrc">Gitter (vim-jp/reading-vimrc)</a></li>
+            <li><a href="https://github.com/vim-jp/reading-vimrc/wiki/Request" target="request">Request</a></li>
+            <li><a href="https://gitter.im/vim-jp/reading-vimrc" target="gitter">Gitter (vim-jp/reading-vimrc)</a></li>
         </ul>
     </div>
 </nav>
