comments, use seo tag

--- a/_layouts/angular.html
+++ b/_layouts/angular.html
@@ -30,6 +30,8 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    {% seo %}
+
   </head>
   <body>
     <div class="wrapper">
