--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,6 +16,8 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    {% seo %}
+
   </head>
   <body>
     <div class="wrapper">
