add google analytics

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -32,5 +32,6 @@
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
     <script src="{{ site.github.url }}/javascripts/navigation.js"></script>
+    {%include google-analytics.html %}
   </body>
 </html>
