--- a/_layouts/angular.html
+++ b/_layouts/angular.html
@@ -57,5 +57,6 @@
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
     <script src="{{ site.github.url }}/javascripts/navigation.js"></script>
+    {%include google-analytics.html %}
   </body>
 </html>
