--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{% if page.title %}{{ page.title }}{% endif %}</title>
-    <link rel="stylesheet" href="{{ site.github.url }}/stylesheets/styles.css">
-    <link rel="stylesheet" href="{{ site.github.url }}/stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/stylesheets/styles.css">
+    <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="{{ site.github.url }}/javascripts/respond.js"></script>
+    <script src="{{ site.github.url | replace: 'http://', '//' }}/javascripts/respond.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 8]>
-    <link rel="stylesheet" href="{{ site.github.url }}/stylesheets/ie.css">
+    <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -31,7 +31,7 @@
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
-    <script src="{{ site.github.url }}/javascripts/navigation.js"></script>
+    <script src="{{ site.github.url | replace: 'http://', '//' }}/javascripts/navigation.js"></script>
     {%include google-analytics.html %}
   </body>
 </html>
