--- a/_layouts/angular.html
+++ b/_layouts/angular.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/stylesheets/styles.css">
     <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="{{ site.github.url }}/javascripts/respond.js"></script>
+    <script src="{{ site.github.url | replace: 'http://', '//' }}/javascripts/respond.js"></script>
 
     <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/stylesheets/stat.css">
     <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/assets/perfect-scrollbar-0.4.10.min.css">
@@ -26,7 +26,7 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 8]>
-    <link rel="stylesheet" href="{{ site.github.url }}/stylesheets/ie.css">
+    <link rel="stylesheet" href="{{ site.github.url | replace: 'http://', '//' }}/stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
