Use https URL for D3.js

--- a/_layouts/angular.html
+++ b/_layouts/angular.html
@@ -16,7 +16,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.14/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.14/angular-route.min.js"></script>
 
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script src="{{ site.github.url | replace: 'http://', '//' }}/assets/perfect-scrollbar-0.4.10.with-mousewheel.min.js"></script>
     <script src="{{ site.github.url | replace: 'http://', '//' }}/javascripts/stat.js"></script>
