Change chat room URL at header

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -21,7 +21,7 @@
                 {% endif %}>Stat</a>
             </li>
             <li><a href="https://github.com/vim-jp/reading-vimrc/wiki/Request" target="request">Request</a></li>
-            <li><a href="https://gitter.im/vim-jp/reading-vimrc" target="gitter">Gitter (vim-jp/reading-vimrc)</a></li>
+            <li><a href="https://app.gitter.im/#/room/#vim-jp_reading-vimrc:gitter.im" target="gitter">Chat room</a></li>
         </ul>
     </div>
 </nav>
